THRIFT-5543: add type parameter to java lib field metadata (#2552)
* add type parameter to java lib field metadata
* reduce number of exceptions